# dcie

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
app/: __init__.py  main.py  tools.py  uploader.py
app/core/: config.py  logger.py
common/: __init__.py  conn.py  exceptions.py  logger.py  settings.py
config/: settings.py
config/profile/: dev.py
core/: __init__.py  ac.py  bert.py  conn.py  exceptions.py  logger.py  reg.py  req.py  settings.py
core/models/: __init__.py  base.py  res.py
core/reader/: __init__.py  asr.py  loader.py  model.py  pd.py
engine/: classifier.py  db.py  detector.py  processor.py  reg.py  req.py  simple_file.py
engine/modules/: reg.py
engine/reader/: __init__.py  asr.py  loader.py  pd.py  scan.py
rules/: finance.yaml  privacy.yaml  vehicle.yaml
rules/reg/: finance.yaml  privacy.yaml  vehicle.yaml
test/: load_folder.py  version.py
trainer/multi_label/: dea.py  多标签.py
trainer/multi_label/train_data/: data.csv  train_hierbert.csv
trainer/single_label/: test-0922-1.xlsx  train-0922-1.xlsx  训练.py
