[project]
name = "dcie"
version = "0.1.0"
description = "Document Compliance Identification Engine/dcie"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
    "tomli>=2.2.1",
    "uvicorn>=0.35.0",
]
